Fix alignment of hr element.

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -107,6 +107,11 @@ html {
   width: 50%;
 }
 
+/* Transcript */
+#transcript-container ul {
+  list-style-type: none;
+}
+
 @font-face {
   font-family: 'Product Sans';
   font-style: normal;
